# hr-system

./: .env.example  .env.local  .gitignore  .gitmodules  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  README.md  RUNNING.md  SECURITY.md  alembic.ini  check_admin.py  check_admin_pg.py  check_and_seed_sqlite.py  check_and_seed_sqlite_v2.py  check_bcrypt.py  check_db.py  check_db_user.py  container_logs.txt  cors_debug_output.txt  debug_cors_issue.py  debug_full_server.py  debug_login.py  debug_output.txt  debug_sqlite.py  debug_token.py  debug_verify_token.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  init_sqlite.py  mypy_report.txt  openapi.json  output.txt  package-lock.json  package.json  patch.py  print_config.py  (+20 more)
.jules/: sentinel.md
alembic/: env.py
docs/: database_schema.md  database_transaction_fix.md  disaster_recovery.md  issues_and_solutions.md  operational_runbooks.md  runtime_fixes_applied.md  troubleshooting_guide.md
environments/: .env.dev  .env.prod  .env.staging
frontend/: build-error.txt  build-error2.txt  index.html  package-lock.json  package.json  rspack.config.mjs  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
monitoring/: alert_rules.yml  alertmanager.yml  loki-config.yml  prometheus.yml  promtail-config.yml
scripts/: add_location_column.py  add_remark_column.py  add_sample_candidates_with_remarks.py  ats-cli.ps1  backup_database.py  backup_scheduler.py  check-worker-health.py  check_candidates.py  check_user.py  create_admin.py  debug_user_login.py  deploy_environment.py  deployment_orchestrator.py  generate_ci_report.py  health_check.py  infrastructure_health.py  init-db.sql  install_pgcrypto.py  manage-tasks.py  manage_duplicates.py  seed_admin.py  (+22 more)
(+399 files in other folders)
